--- a/Food_Website/CSS/style.css
+++ b/Food_Website/CSS/style.css
@@ -101,32 +101,32 @@
 #home {
     display: flex;
     flex-direction: column;
-    padding: 3px 200px;
-    height: 600px;
+    padding: 3px 100px;
+    height: 520px;
     align-items: center;
     justify-content: center;
 }
 
 #home::before {
     content: "";
-    background: url('/Food_Website/img/pexels-creative-vix-370984.jpg') no-repeat center center/cover;
+    background: url('/Food_Website/img/—Pngtree—elemental\ background\ of\ fast\ food_981344.png') no-repeat center center/cover;
     position: absolute;
     top: 0px;
     left: 0px;
-    height: 70%;
-    width: 100%;
+    height: 65vh;
+    width: 100vw;
     z-index: -1;
     opacity: 0.89;
 }
 
 #home h1 {
-    color: white;
+    color: black;
     text-align: center;
     font-family: 'Bree Serif', serif;
 }
 
 #home p {
-    color: white;
+    color: black;
     font-size: 1.5rem;
     text-align: center;
     font-family: 'Bree Serif', serif;
@@ -138,6 +138,7 @@
 .primary-heading {
     font-size: 3.8rem;
     padding: 12px;
+    font-family: 'Bree Serif', serif;
 }
 
 .secondary-heading {
@@ -182,16 +183,16 @@
 #services {
     margin: 34px;
     display: flex;
+    align-items: stretch;
+    font-family: 'Bree Serif', serif;
 }
 
 #services .box {
     height: 300px;
-    width: 607px;
     padding: 34px;
     border-radius: 28px;
     margin: 3px 6px;
     background: #f2f2f2;
-    font-family: 'Bree Serif', serif;
 }
 
 #services .box img {
@@ -243,18 +244,76 @@
 }
 
 
+/* contact section */
+
+#contact {
+    position: relative;
+}
+
+#contact::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.7;
+    background: url("/Food_Website/img/Contact\ us-01.jpg") no-repeat center center/cover;
+}
+
+#contact-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 34px;
+    /* height: 200px; */
+}
+
+#contact-box input,
+#contact-box textarea {
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 10px;
+    font-size: 1.1rem;
+}
+
+#contact {
+    z-index: -1;
+}
+
+#contact-box form {
+    width: 60%;
+}
+
+#contact-box label {
+    width: 40%;
+    font-size: 1.3rem;
+    font-family: 'Bree Serif', serif;
+}
+
+
 /* Clients-Section */
 
 #client-section {
     margin-top: 20px;
 }
 
+#client-section::before {
+    content: "";
+    position: absolute;
+    background-image: url('/Food_Website/img/pexels-ella-olsson-3026808.jpg');
+    width: 100%;
+    z-index: -1;
+    opacity: 0.3;
+}
+
 #clients {
     display: flex;
     margin: 34px;
+    justify-content: center;
 }
 
 .client-items {
+    /*
     height: 300px;
     width: 607px;
     padding: 34px;
@@ -262,7 +321,12 @@
     margin: 3px 6px;
     background: #f2f2f2;
     font-family: 'Bree Serif', serif;
-    border: 2px solid green;
+    */
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+    margin-right: 50px;
+    margin-left: 50px;
 }
 
 
@@ -276,12 +340,12 @@
 } */
 
 .img-to-text img {
-    height: 200px;
-    display: block;
+    height: 144px;
+    display: flex;
     position: relative;
     margin: auto;
     border-radius: 50px;
-    border: 2px solid red;
+    z-index: -1;
 }
 
 
@@ -295,11 +359,13 @@
     transition: .5s ease;
     opacity: 0;
     position: relative;
-    /* top: -100px;
-    left: 240px; */
+    top: -110px;
+    left: 75px;
+    right: 200px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
+    font-family: 'Bree Serif', serif;
 }
 
 .img-to-text:hover .centered {
@@ -334,4 +400,14 @@
 .btn:hover {
     /* transform: translate3d(2px, -2px, -2px); */
     transform: rotate3d(0, 1, 0, 15deg)
+}
+
+
+/* Footer Section */
+
+.footer {
+    background: black;
+    color: white;
+    padding: 20px;
+    font-size: 25px;
 }
