React Started with Dictionary Project completed LoginSignup Page with BCrypt Hash

--- a/NodeJS-Tutorial/restfulapi/templates/partials/updateScript.hbs
+++ b/NodeJS-Tutorial/restfulapi/templates/partials/updateScript.hbs
@@ -22,6 +22,8 @@
                 "Content-Type": "application/json"
             },
             method:"PATCH",
+        }).then(()=>{
+            msg.innerText = `Updated Successfully`;
         })
             }catch(err){
                 msg.innerText = `Error occured can't update the value`;
