--- a/NodeJS-Tutorial/restfulapi/public/css/style.css
+++ b/NodeJS-Tutorial/restfulapi/public/css/style.css
@@ -147,3 +147,13 @@
     justify-content: center;
     height: 70vh;
 }
+
+#msg {
+    font-size: 18px;
+    font-weight: bold;
+    display: block;
+    margin: auto;
+    border: 2px solid rgba(0, 0, 0, 0.658);
+    border-radius: 15px;
+    padding: 10px;
+}
