--- a/NodeJS-Tutorial/restfulapi/templates/views/delete.hbs
+++ b/NodeJS-Tutorial/restfulapi/templates/views/delete.hbs
@@ -13,7 +13,7 @@
     <div class="search-container">
         <div class="sr-form-container">
             <form id="sr-form-container">
-                <input type="text" id="id" placeholder="Enter your ID">
+                <input type="text" id="id" placeholder="Enter your phone number...">
                 <input type="submit" value="Delete" id="delete">
             </form>
         </div>
